# qrotor_mavlink

./: .gitignore  CMakeLists.txt  README.md  install_mavlink_msgs.sh  qrotor.xml
custom_definitions/: qrotor.xml
include/: cpp_sockets.h  mavlink_dialect.h  qrotor_mavlink.h  sys_log.hpp
include/mavlink/v2.0/ASLUAV/: ASLUAV.h  ASLUAV.hpp  testsuite.h
include/mavlink/v2.0/AVSSUAS/: AVSSUAS.h  AVSSUAS.hpp  testsuite.h  version.h
include/mavlink/v2.0/all/: all.h  all.hpp  mavlink.h  testsuite.h  version.h
include/mavlink/v2.0/ardupilotmega/: ardupilotmega.h  ardupilotmega.hpp  testsuite.h
include/mavlink/v2.0/common/: common.h  common.hpp
include/mavlink/v2.0/development/: development.h  development.hpp  testsuite.h
include/mavlink/v2.0/icarous/: icarous.h  icarous.hpp  mavlink.h
include/mavlink/v2.0/matrixpilot/: matrixpilot.h  matrixpilot.hpp  testsuite.h
include/mavlink/v2.0/minimal/: minimal.h  minimal.hpp
include/mavlink/v2.0/paparazzi/: paparazzi.h  paparazzi.hpp  testsuite.h
include/mavlink/v2.0/python_array_test/: python_array_test.h  python_array_test.hpp  testsuite.h  version.h
include/mavlink/v2.0/qrotor/: mavlink.h  mavlink_msg_altitude.hpp  mavlink_msg_att_pos_mocap.hpp  mavlink_msg_attitude.hpp  mavlink_msg_autopilot_version.hpp  mavlink_msg_battery_status.hpp  mavlink_msg_camera_fov_status.hpp  mavlink_msg_camera_image_captured.hpp  mavlink_msg_camera_information.hpp  mavlink_msg_camera_settings.hpp  mavlink_msg_camera_tracking_geo_status.hpp  mavlink_msg_camera_trigger.hpp  mavlink_msg_cellular_config.hpp  mavlink_msg_cellular_status.hpp  mavlink_msg_change_operator_control_ack.hpp  mavlink_msg_collision.hpp  mavlink_msg_command_ack.hpp  mavlink_msg_command_cancel.hpp  mavlink_msg_command_int.hpp  mavlink_msg_control_system_state.hpp  mavlink_msg_debug.hpp  mavlink_msg_debug_float_array.hpp  mavlink_msg_debug_vect.hpp  mavlink_msg_encapsulated_data.hpp  mavlink_msg_esc_status.hpp  mavlink_msg_extended_sys_state.hpp  mavlink_msg_flight_information.hpp  mavlink_msg_follow_target.hpp  (+77 more)
libmavconn/: CMakeLists.txt
libmavconn/include/mavconn/: console_bridge_compat.h  mavlink_dialect.h
libmavconn/include/mavlink/v2.0/ASLUAV/: ASLUAV.h  mavlink.h  version.h
libmavconn/include/mavlink/v2.0/AVSSUAS/: AVSSUAS.h  mavlink.h  version.h
libmavconn/include/mavlink/v2.0/all/: all.h  mavlink.h  version.h
libmavconn/include/mavlink/v2.0/ardupilotmega/: ardupilotmega.h  ardupilotmega.hpp  mavlink.h  version.h
libmavconn/include/mavlink/v2.0/common/: common.h  common.hpp  mavlink.h  version.h
libmavconn/include/mavlink/v2.0/development/: development.h  mavlink.h  version.h
libmavconn/include/mavlink/v2.0/icarous/: icarous.h  mavlink.h  version.h
libmavconn/include/mavlink/v2.0/matrixpilot/: matrixpilot.h  mavlink.h  version.h
libmavconn/include/mavlink/v2.0/minimal/: mavlink.h  minimal.h  version.h
libmavconn/include/mavlink/v2.0/paparazzi/: mavlink.h  paparazzi.h  version.h
libmavconn/include/mavlink/v2.0/python_array_test/: mavlink.h  python_array_test.h  version.h
libmavconn/include/mavlink/v2.0/qrotor/: gtestsuite.hpp  mavlink.h  mavlink_msg_actuator_control_target.hpp  mavlink_msg_actuator_output_status.hpp  mavlink_msg_adsb_vehicle.hpp  mavlink_msg_ais_vessel.hpp  mavlink_msg_attitude_quaternion.hpp  mavlink_msg_attitude_quaternion_cov.hpp  mavlink_msg_attitude_target.hpp  mavlink_msg_auth_key.hpp  mavlink_msg_autopilot_state_for_gimbal_device.hpp  mavlink_msg_button_change.hpp  mavlink_msg_camera_capture_status.hpp  mavlink_msg_camera_tracking_image_status.hpp  mavlink_msg_change_operator_control.hpp  mavlink_msg_command_long.hpp  mavlink_msg_component_information.hpp  mavlink_msg_current_event_sequence.hpp  mavlink_msg_data_stream.hpp  mavlink_msg_data_transmission_handshake.hpp  mavlink_msg_distance_sensor.hpp  mavlink_msg_efi_status.hpp  mavlink_msg_esc_info.hpp  mavlink_msg_estimator_status.hpp  mavlink_msg_event.hpp  mavlink_msg_fence_status.hpp  mavlink_msg_file_transfer_protocol.hpp  mavlink_msg_generator_status.hpp  mavlink_msg_gimbal_device_attitude_status.hpp  mavlink_msg_gimbal_device_information.hpp  mavlink_msg_gimbal_manager_set_attitude.hpp  mavlink_msg_gimbal_manager_set_manual_control.hpp  mavlink_msg_gimbal_manager_set_pitchyaw.hpp  mavlink_msg_gimbal_manager_status.hpp  mavlink_msg_global_position_int_cov.hpp  mavlink_msg_global_vision_position_estimate.hpp  mavlink_msg_gps2_raw.hpp  mavlink_msg_gps2_rtk.hpp  mavlink_msg_gps_global_origin.hpp  mavlink_msg_gps_status.hpp  (+91 more)
libmavconn/include/mavlink/v2.0/standard/: mavlink.h  standard.h  version.h
libmavconn/include/mavlink/v2.0/storm32/: mavlink.h  storm32.h  version.h
libmavconn/include/mavlink/v2.0/test/: mavlink.h  test.h  version.h
libmavconn/include/mavlink/v2.0/uAvionix/: mavlink.h  uAvionix.h  version.h
libmavconn/include/mavlink/v2.0/ualberta/: mavlink.h  ualberta.h  version.h
libmavconn/src/: interface.cpp  mavlink_helpers.cpp  mavlink_helpers.cpp.em  serial.cpp  tcp.cpp  udp.cpp
libmavconn/test/: my_test.cpp  test_mavconn.cpp
src/: qrotor_mavlink.cpp
test/: client.cpp  server.cpp
(+16 files in other folders)
